--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Test Page Title</title>
         <link href="styles/style.css" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> #did not work as intended lol -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas+Neue&effect=fire-animation">
     </head>
     <body>
